[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/TerrainSections/LandingPad.gd" type="Script" id=1]
[ext_resource path="res://Sprites/LandingPadSpritesheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/LandingArrows.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Amber",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14, 4 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="LandingPad" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 128, 212 )
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -32, 32, -32, 0, -24, -12, -24, -14, 24, -14, 24, -12, 32, 0, 32, 32 )

[node name="Sprite" type="AnimatedSprite" parent="StaticBody2D"]
frames = SubResource( 4 )
animation = "Red"

[node name="LandingArea" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/LandingArea"]
position = Vector2( 0, -18 )
shape = SubResource( 5 )

[node name="LandingArrows" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 128, 172 )
frames = SubResource( 9 )
frame = 1
playing = true

[connection signal="body_entered" from="StaticBody2D/LandingArea" to="." method="_on_LandingArea_body_entered"]
[connection signal="body_exited" from="StaticBody2D/LandingArea" to="." method="_on_LandingArea_body_exited"]
